--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,12 +2,12 @@ name: CI
 on: [push]
 jobs:
   push_to_registry:
-    - steps:
-        - uses: actions/checkout@v1.0
-        - uses: docker/build-push-action@v1
-          with:
-            username: '${{ secrets.DOCKER_USERNAME }}'
-            password: '${{ secrets.DOCKER_PASSWORD }}'
-            repository: yutachaos/kube-job-notifier
-            tag_with_ref: true
-            push: '${{ startsWith(github.ref, ''refs/tags/'') }}'
+    steps:
+      - uses: actions/checkout@v1.0
+      - uses: docker/build-push-action@v1
+        with:
+          username: '${{ secrets.DOCKER_USERNAME }}'
+          password: '${{ secrets.DOCKER_PASSWORD }}'
+          repository: yutachaos/kube-job-notifier
+          tag_with_ref: true
+          push: '${{ startsWith(github.ref, ''refs/tags/'') }}'
