--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   push_to_registry:
     steps:
+      runs-on: ubuntu-latest
       - uses: actions/checkout@v1.0
       - uses: docker/build-push-action@v1
         with:
