--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,7 +4,7 @@ jobs:
   push_to_registry:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.0
+      - uses: actions/checkout@master
       - uses: docker/build-push-action@v1
         with:
           username: '${{ secrets.DOCKER_USERNAME }}'
