--- a/manifests/sample/deployment.yaml
+++ b/manifests/sample/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: jobview
       containers:
         - name: kube-job-notifier
-          image: yutachaos/kube-job-notifier:0.0.1
+          image: yutachaos/kube-job-notifier:v0.0.5
           env:
             - name: SLACK_TOKEN
               value: "YOUR SLACK TOKEN"
