--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: docker/build-push-action@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
           repository: yutachaos/kube-job-notifier
           tag_with_ref: true
-          push: '${{ startsWith(github.ref, ''refs/tags/'') }}'
