Added feature slack split notification chanel

--- a/manifests/sample/deployment.yaml
+++ b/manifests/sample/deployment.yaml
@@ -23,3 +23,7 @@ spec:
               value: "YOUR SLACK TOKEN"
             - name: SLACK_CHANNEL
               value: "YOUR NOTIFICATION SLACK CHANNEL ID"
+            - name: SLACK_SUCCEED_CHANNEL
+              value: "YOUR NOTIFICATION SLACK CHANNEL ID FOR SUCCESS"
+            - name: SLACK_FAILED_CHANNEL
+              value: "YOUR NOTIFICATION SLACK CHANNEL ID FOR FAILED"
