--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,23 @@
 name: docker push
 on: [push]
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.14.2
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.14.2
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+
+      - name: Test code
+        run: go test -v .
   push_to_registry:
     runs-on: ubuntu-latest
     steps:
