Added push true

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,3 +55,4 @@ jobs:
           tags: ${{ steps.docker_meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          push: true
