--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
+      - name: Go mod tidy check
+        run: go mod tidy && git diff --exit-code
+
       - name: Get dependencies
         run: go get -v -t -d ./...
 
