--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,7 +2,8 @@ name: release
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+" for example, v1.0.0
+      - "v[0-9]+.[0-9]+.[0-9]-test" for example, v1.0.0-test
 jobs:
   test:
     name: Test
