--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,23 +1,75 @@
-name: test
-on: [push]
+name: Update Dependencies and Test
+
+on:
+  pull_request:
+    types: [opened, synchronize]
+    paths:
+      - 'go.mod'
+      - 'go.sum'
+      - '**.go'
+  push:
+    branches:
+      - main
+    paths:
+      - 'go.mod'
+      - 'go.sum'
+      - '**.go'
+
 jobs:
-  test:
-    name: Test
+  update-deps:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
-      - name: Set up Go 1.22.0
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref }}
+
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.22.0
-        
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+          go-version: '1.21'
+          cache: true
 
-      - name: Go mod tidy check
-        run: go mod tidy && git diff --exit-code
+      - name: Run go mod tidy
+        run: go mod tidy
 
-      - name: Get dependencies
-        run: go get -v -t -d ./...
+      - name: Check for changes
+        id: git-check
+        run: |
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "changes=false" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Execute test
+      - name: Commit and push if changed
+        if: steps.git-check.outputs.changes == 'true'
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add go.mod go.sum
+          git commit -m "chore(deps): update dependencies with go mod tidy"
+          git push
+
+  test:
+    needs: update-deps
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref }}
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+          cache: true
+
+      - name: Run tests
         run: make test
