--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea/codeStyles
 # Generated files
 .idea/**/contentModel.xml
 
