--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 /vendor/
 /Godeps/
 
+kube-job-notifier
+
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
